==> SphinxEVK/openMV_on_RT1064/OpenMV with RT1064-Source Code/ports/nxp_rt1050_60/sdcard.c <==
#include <string.h>
#include "py/nlr.h"
#include "py/runtime.h"
#include "py/mphal.h"
#include "lib/oofatfs/ff.h"
#include "extmod/vfs_fat.h"
#include "fsl_debug_console.h"
#include "fsl_sdmmc_host.h"
#include "fsl_sd.h"
#include "sdcard.h"
#include "pin.h"
#include "genhdr/pins.h"
#include "bufhelper.h"
#include "dma.h"
#include "irq.h"
#include "composite.h"	// for "USB_DEVICE_INTERRUPT_PRIORITY" macro
#define usb_echo(...) mp_printf(MP_PYTHON_PRINTER, __VA_ARGS__)

status_t sdcard_init(void) {
    // invalidate the g_sd
	// sdtest_main();
    g_sd.isHostReady = 0;
	
	//_sdcard_pin_init();
	USDHCClockConfiguration();


    status_t error = kStatus_Success;

    NVIC_SetPriority(SD_HOST_IRQ, IRQ_PRI_SDIO);
    g_sd.host.base = SD_HOST_BASEADDR;
    g_sd.host.sourceClock_Hz = SD_HOST_CLK_FREQ;
	g_sd.usrParam.cd = &s_sdCardDetect;

    /* Init card. */
    if (SD_HostInit(&g_sd))
    {
        mp_print_str(MP_PYTHON_PRINTER, "\n SD card init failed \n");
        error = kStatus_Fail;
    } else {
		
    }

	SD_PowerOnCard(g_sd.host.base, g_sd.usrParam.pwr);
	/* wait card insert */
	uint32_t t1 = HAL_GetTick();
	while (!s_cardInserted)
	{
		if (HAL_GetTick() - t1 > 200)
			break;
	}

	PRINTF("\r\nCard inserted.\r\n");
	/* reset host once card re-plug in */
	SD_HostReset(&(g_sd.host));
	/* Init card. */
	if (SD_CardInit(&g_sd))
	{
		PRINTF("\r\nSD card init failed.\r\n");
		return -1;
	}
    return error;
}

bool sdcard_is_present(void) {
	if (SD_IsCardPresent(&g_sd) && g_sd.isHostReady)
		return 1;
	return 0;}

bool sdcard_power_on(void) {
    if (!sdcard_is_present()) {
        return false;
    }
    if (g_sd.isHostReady) {
        return true;
    }
	if (sdcard_init() == kStatus_Success)
		return 1;
	sdcard_deinit();
    return 0;
}

void sdcard_power_off(void) {
    if (!g_sd.isHostReady) {
        return;
    }
    SD_Deinit(&g_sd);
}

uint64_t sdcard_get_capacity_in_bytes(void) {
    if (g_sd.isHostReady == 0) {
        return 0;
    }
	return (uint64_t)g_sd.blockCount * g_sd.blockSize;
}

mp_uint_t sdcard_read_blocks(uint8_t *dest, uint32_t block_num, uint32_t num_blocks) {
    // check that SD card is initialised
    status_t ret;
    if (g_sd.isHostReady == 0) {
        return kStatus_Fail;
    }
	uint32_t usbIrqEn = MyNVIC_GetEnabledIRQ(USB_OTG1_IRQn);
	if (usbIrqEn)
		NVIC_DisableIRQ(USB_OTG1_IRQn);
	
	ret = SD_ReadBlocks(&g_sd, dest, block_num, num_blocks);
	if (usbIrqEn)
		NVIC_EnableIRQ(USB_OTG1_IRQn);
    return ret;
}

mp_uint_t sdcard_write_blocks(const uint8_t *src, uint32_t block_num, uint32_t num_blocks) {
    // check that SD card is initialised
    // check that SD card is initialised
    status_t ret;
    if (g_sd.isHostReady == 0) {
        return kStatus_Fail;
    }
	uint32_t usbIrqEn = MyNVIC_GetEnabledIRQ(USB_OTG1_IRQn);
	if (usbIrqEn)
		NVIC_DisableIRQ(USB_OTG1_IRQn);
	
	ret = SD_WriteBlocks(&g_sd, src, block_num, num_blocks);
	if (usbIrqEn)
		NVIC_EnableIRQ(USB_OTG1_IRQn);
    return ret;
}

STATIC mp_obj_t sd_info(mp_obj_t self) {
    if (g_sd.isHostReady == 0 || SD_IsCardPresent(&g_sd)) {
        return mp_const_none;
    }
    // cardinfo.SD_csd and cardinfo.SD_cid have lots of info but we don't use them
    mp_obj_t tuple[3] = {
        mp_obj_new_int_from_ull(g_sd.blockCount * g_sd.blockSize),
        mp_obj_new_int_from_uint(g_sd.blockSize),
        mp_obj_new_int(g_sd.busClock_Hz / 1000),
    };
    return mp_obj_new_tuple(3, tuple);
}
